--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,6 @@ jar {
 }
 
 shadowJar {
-    //archiveName = 'revolut-test.jar'
     archiveFileName = 'revolut-test-all.jar'
 }
 
@@ -56,5 +55,6 @@ dependencies {
     testCompile "org.hamcrest:hamcrest:${hamcrest}"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiter}"
+//    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiter}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiter}"
 }
